# Misery

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/klmn/misery/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fragment.glsl  fragment_bb.glsl  pillar.fbx  vertex.glsl  vertex_bb.glsl
app/src/main/cpp/: AABB.cpp  AABB.h  CMakeLists.txt  ECS.cpp  ECS.h  HelloWorld.cpp  Mesh.cpp  Mesh.h  RenderContext.cpp  RenderContext.h  RenderEngine.cpp  RenderEngine.h  Transform.cpp  Transform.h  assets.cpp  assets.h  colliders.cpp  colliders.h  interaction.cpp  interaction.h  logging.h  misery_native.cpp  physics.cpp  physics.h
app/src/main/java/com/klmn/misery/: ECS.kt  ECSJNI.kt  Game.kt  Input.kt  Interaction.kt  Material.kt  Mesh.kt  Misery.kt  MiseryJNI.kt  MiseryView.kt  Model.kt  ModelRenderer.kt  Motion.kt  Projection.kt  RenderContext.kt  Shader.kt  Texture.kt  Transform.kt
app/src/main/java/com/klmn/misery/examples/: FlappyPig.kt
app/src/main/java/com/klmn/misery/jni/: MiseryJNI.kt  NativeComponent.kt  NativeFloatsComponent.kt
app/src/main/java/com/klmn/misery/math/: AABB.kt  Camera.kt  ImmutableQuaternion.kt  ImmutableVec2f.kt  ImmutableVec3f.kt  Mat4f.kt  Quaternion.kt  Transform.kt  Vec2f.kt  Vec3f.kt
app/src/main/java/com/klmn/misery/render/: Material.kt  Mesh.kt  MiserySurfaceView.kt  MiseryTextureView.kt  MiseryView.kt  Shader.kt  (+2 more)
app/src/main/res/values/: strings.xml
app/src/test/java/com/klmn/misery/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
